feat: add secret type (#62)
* feat: add secret type to data structure

* feat: allow set data type from CLI

* feat: add support for share

* feat: add data_type in hakanai client

* feat: add image preview modal, refactoring: move secret view code into component

* feat: finish implementing preview feature

* fix: sorting in i18n

* fix: import type in get-secret.ts

* chore: clarify comment
